Update index.html with latest changes

--- a/index.html
+++ b/index.html
@@ -58,18 +58,19 @@
   
 
   
- <div class="options-container" style="display: flex; justify-content: center; gap: 40px; margin: 60px 0;">
-  
-      <!-- Option 2: Enter Measurements -->
-      <div class="option-card" style="background: #fff; border-radius: 16px; box-shadow: 0 2px 8px rgba(0,0,0,0.07); padding: 32px 24px; text-align: center;">
-        <h3 style="font-family: 'Michroma', sans-serif; color: #F7A8B8;">Enter Your Measurements</h3>
-        <form id="measurements-form">
-          <input type="number" placeholder="Bust (in cm)" required style="margin: 8px 0; width: 80%; padding: 6px;"><br>
-          <input type="number" placeholder="Waist (in cm)" required style="margin: 8px 0; width: 80%; padding: 6px;"><br>
-          <input type="number" placeholder="Shoulders (in cm)" required style="margin: 8px 0; width: 80%; padding: 6px;"><br>
-          <input type="number" placeholder="Hips (in cm)" required style="margin: 8px 0; width: 80%; padding: 6px;"><br>
-          <button type="submit" style="padding: 8px 24px; background: #F7A8B8; color: #fff; border: none; border-radius: 8px; font-family: 'Michroma', sans-serif; cursor: pointer;">Submit</button>
-        </form>
+ <div class="form-container" >
+
+      <p class="slay-animate">"Fashion is not about trends. It's about dressing in a way that expresses who you are — confidently, comfortably, and unapologetically."
+</p>
+     <div class="form-section" >
+        <h2 >Enter Your Measurements</h2>
+         <form>
+          <input type="number" placeholder="Bust (in cm)" ><br>
+          <input type="number" placeholder="Waist (in cm)" ><br>
+          <input type="number" placeholder="Shoulders (in cm)"><br>
+          <input type="number" placeholder="Hips (in cm)" >
+          <button type="submit" >Submit</button>
+</form>
       </div>
     </div>
   </div>
