--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         Mystic is a personalized styling platform designed to help women discover outfits that truly complement their body proportions and skin undertones. We believe fashion is not about following trends—it's about finding what makes you feel confident and comfortable in your own skin. Whether you're unsure about your body shape or confused about what colors suit your tone, Mystic offers thoughtful outfit recommendations that celebrate individuality. Our goal is to simplify styling and make self-expression through fashion effortless for every woman.</p>
    </div>
     <div class="contact" id="contact">
-<h3>Contact:  <a style="text-decoration: none;color: white;" href="https://mail.google.com/mail/?view=cm&fs=1&to=yourmystic13@gmail.com" >yourmystic13@gmail.com</a></h3>
+<h3>Contact:  <a style="text-decoration: none;color:#0A400C;" href="https://mail.google.com/mail/?view=cm&fs=1&to=yourmystic13@gmail.com" >yourmystic13@gmail.com</a></h3>
     </div>
   </footer>
   <script src="/script.js"></script>
