--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <header id="navbar">
     <div class="navcontainer">
-   <div class="mystic-scroll" id="mysticText">Mystic</div>
+   <div class="mystic-scroll" id="mysticText">MYSTIC</div>
     <nav>
         
       <ul>
@@ -27,9 +27,13 @@
   </header>
 
   <section class="hero">
-<h1>Mystic</h1>
-
-  </section>
+<h1>M</h1>
+<h1>Y</h1>
+<h1>S</h1>
+<h1>T</h1>
+<h1>I</h1>
+<h1>C</h1>
+</section>
 
 <div class="content">
     <h2>Designed For You</h2>
