--- a/result.html
+++ b/result.html
@@ -14,7 +14,7 @@
     <div class="navcontainer">
       <a class="back-btn" href="index.html">← Back to Form</a>
 
-   <div class="mystic-scroll" id="mysticText">Mystic</div>
+   <div class="mystic-scroll" id="mysticText">MYSTIC</div>
     <nav>
         
       <ul>
@@ -35,7 +35,7 @@
     >
     <button 
       type="submit" 
-      style="padding: 10px 18px; border-radius: 4px; border: none; background: #B1AB86; color: white; font-weight: bold; font-size: 16px; cursor: pointer;"
+      style="padding: 10px 18px; border-radius: 4px; border: none; background: white;border:1px solid #0A400C; color: #0A400C; font-weight: bold; font-size: 16px; cursor: pointer;"
     >Search</button>
   </form>
 </div>
@@ -52,7 +52,7 @@ header{
     width: 100%;
       padding: 20px 40px;
      margin-bottom: 100px;;
-      background-color: #B1AB86;
+      background-color: #819067;
       color: white;
       z-index: 1000;
       transition: all 0.3s ease;
