--- a/index.html
+++ b/index.html
@@ -74,7 +74,9 @@
           <input type="number" placeholder="Bust (in cm)" ><br>
           <input type="number" placeholder="Waist (in cm)" ><br>
           <input type="number" placeholder="Shoulders (in cm)"><br>
-          <input type="number" placeholder="Hips (in cm)" >
+          <input type="number" placeholder="Hips (in cm)" ><br>
+           <input type="number" placeholder="Torso-length (in cm)" ><br>
+            <input type="number" placeholder="Leg-length (in cm)" ><br>
           <button type="submit" >Submit</button>
 </form>
       </div>
