--- a/result.html
+++ b/result.html
@@ -173,7 +173,7 @@ html {
 }
 
 
-@media (max-width: 700px) {
+/* @media (max-width: 700px) {
   .outfit-grid {
     grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
   }
@@ -207,13 +207,13 @@ align-content: center;}
     }
     /* .navcontainer{
    
-    } */
+    } 
 #outfit-results {
     padding: 0px;
-    margin-top: 200px;
+  
 }
 }
-
+ */
 
 @media (max-width: 768px) {
   h2 {
