--- a/result.html
+++ b/result.html
@@ -253,12 +253,16 @@ align-content: center;}
 }
 
 @media (max-width: 480px) {
-  h2 {
+  #outfit-results h2 {
     font-size: 20px;
     position: relative;
    display: block;
   }
-
+#styling-suggestions h2{
+  font-size: 20px;
+  position: relative;
+  display: block;
+}
   h3.category-heading {
     font-size: 16px;
   }
@@ -268,8 +272,11 @@ align-content: center;}
   }
   .outfit-grid {
     grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
-    margin-left:50px;
+  
   }
+#outfit-results {
+    margin-left: 50px;}
+
 
  nav ul { display: flex;
       justify-content: flex-end;
