--- a/result.html
+++ b/result.html
@@ -42,6 +42,18 @@
   </header>
 
 <style>
+
+  .preview-image {
+    position: absolute;
+    z-index: 999;
+    border: 2px solid #ccc;
+    border-radius: 8px;
+    display: none;
+    width: 180px;
+    height: auto;
+  }
+
+  
 #outfit-results {
     background-color:#B1AB86;
 }
