--- a/result.html
+++ b/result.html
@@ -39,6 +39,7 @@
     >Search</button>
   </form>
 </div>
+
   </header>
 
 <style>
@@ -178,7 +179,30 @@ button{
 
  
 }
+.mimage{
+  display: flex;
+  flex-direction: row;
+  padding: 120px 50px 50px 50px;
 
+}
+.mimage img{
+  
+  height: 800px;
+}
+.mimage p{
+  align-self: center;
+ position: relative;
+ 
+ width: 50%;
+  color: #0A400C;
+  font-family: 'Times New Roman', sans-serif;
+  font-size: 2rem;
+  font-weight: bold;
+  padding-left: 50px;
+ 
+  
+  opacity: 1;
+}
 .back-btn {
   text-decoration:none ;
   color: white}
@@ -330,7 +354,10 @@ button{
   
   <script src="/result.js"></script>
 
-
+<div class="mimage">
+<img src ="/mimg.jpg">
+<p>"The dress must follow the body of a woman, not the body following the shape of the dress."</p>
+</div>
 </body>
 
 </html>
