--- a/outfits.html
+++ b/outfits.html
@@ -49,7 +49,7 @@
 
 
   
-  <script src="/result.js"></script>
+  <script src="/outfits.js"></script>
 
 <!-- <div class="mimage">
 <img src ="/mimg.jpg">
