--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
   <img src="images/sketch.jpeg" alt="Visual 4">
   </div>
   <div class="images">
-    <img src="images/color.jpeg" alt="Visual 5">
+    <img src="/images/fp.png" alt="Visual 5">
     </div>
-</div>
+</div> 
    
 
   
@@ -53,8 +53,8 @@
   
  <div class="form-container" >
 
-      <p class="slay-animate">"Fashion is not about trends. It's about dressing in a way that expresses who you are — confidently, comfortably, and unapologetically."
-</p>
+      <!-- <p class="slay-animate">"Fashion is not about trends. It's about dressing in a way that expresses who you are — confidently, comfortably, and unapologetically."
+</p> -->
      <div class="form-section" >
         <h2 >Enter Your Measurements</h2>
         <form id="yourFormID">
@@ -76,12 +76,12 @@
 
 
  <div id="resultOptions" class="card-container" style="display: none;">
-  <div class="option-card" onclick="showStyling()" style="background:url(/style.jpg) ;">
+  <div class="option-card" onclick="showStyling()" style="background:url(/images/style.jpg) ;">
     <h2> Styling Suggestions</h2>
     <p>See tips tailored to your body shape</p>
   </div>
 
-  <div class="option-card" onclick="showOutfits()" style="background:url(/outfits.jpg) ;">
+  <div class="option-card" onclick="showOutfits()" style="background:url(/images/outfits.jpg) ;">
     <h2> Outfit Recommendations</h2>
     <p>Explore outfits that flatter your proportions</p>
   </div>
